# contextvault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.obsidian/: graph.json  workspace.json
docs/: STATE.md  api.md  architecture.md  privacy.md  quickstart.md  session-capture.md
docs/adapters/: claude-code.md  cursor.md  hermes.md
obsidian-plugin/: README.md  main.ts  manifest.json  package.json  styles.css  tsconfig.json
site/: index.html
src/contextvault/: __init__.py  cli.py  config.py  vault.py  workspace.py
src/contextvault/adapters/: __init__.py
src/contextvault/adapters/claude_code/: __init__.py  hooks.json
src/contextvault/capture/: __init__.py  claude_code.py  redact.py  runner.py  summarize.py  sweeper.py
src/contextvault/graph/: __init__.py  canvas.py  neighborhood.py
src/contextvault/ingest/: __init__.py
src/contextvault/lint/: __init__.py  checks.py
src/contextvault/retrieve/: __init__.py  bm25.py  persist.py  query.py  rerank.py
src/contextvault/server/: __init__.py  auth.py  http.py  mcp.py  tools.py
tests/fixtures/transcripts/: golden.jsonl
tests/integration/: test_http_server.py
tests/unit/: test_adapters.py  test_bm25.py  test_capture_runner.py  test_claude_code.py  test_cli_capture.py  test_cli_export.py  test_cli_init_recall.py  test_cli_phase4_phase5.py  test_cli_smoke.py  test_config.py  test_graph_canvas.py  test_lint_checks.py  test_lint_full.py  test_lint_semantic_drift.py  test_llm_summarize.py  test_mcp_server.py  test_redact.py  test_rerank.py  test_retrieve_query.py  test_server_auth.py  test_server_tools.py  test_summarize.py  test_vault.py  test_workspace.py
