[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "contextvault"
version = "0.1.0"
description = "LLM-agnostic per-workspace memory backed by Obsidian. Auto-captures Claude Code sessions, exposes the vault to any LLM via MCP + HTTP."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ContextVault contributors" }]
keywords = ["llm", "obsidian", "memory", "claude", "mcp", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "tomli>=2.0; python_version<'3.11'",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rerank = ["ollama>=0.3.0"]
egress = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
contextvault = "contextvault.cli:main"

[project.urls]
Homepage = "https://github.com/contextvault/contextvault"
Issues = "https://github.com/contextvault/contextvault/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/contextvault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end tests that touch the filesystem",
    "egress: tests that require external network (gated, default-skip)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
